# MCMC

./: .gitignore  404.html  CMakeLists.txt  F228.html  LICENSE  Makefile  README.md  convergence.py  index.html  mcmc.html  mkdocs.yml  nu.h  pdf.py  samples.csv  test  test.cpp  test_state.csv
.github/workflows/: deploy.yml
about/: index.html
docs/: about.md  index.md  quickstart.md
examples/: CMakeLists.txt  Makefile  tests.cpp
examples/example-0/: example.cpp
examples/example-1/: example.cpp
examples/example-2/: Makefile  convergence.py  example.cpp
examples/example-3/: example.cpp  pdf.py
examples/example-4/: example.cpp  pdf.py
examples/example-5/: Makefile  example  example.cpp
quickstart/: index.html
src/: emcee.cpp  emcee.h  ensemble.cpp  ensemble.h  mcmc.cpp  mcmc.h  nu.h  walker.cpp  walker.h
src/numcmc/: CMakeLists.txt
src/numcmc/include/numcmc/: ensemble.h  mcmc.h  nu.h  walker.h
src/numcmc/src/: ensemble.cpp  mcmc.cpp  walker.cpp
